[project]
name = "chronicle-intel"
version = "0.1.0"
description = "A longitudinal intelligence layer: fold repeated intelligence snapshots into a bitemporal store, then see what changed, reconstruct entity timelines, and replay the picture over time."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.8.0",
    "rich>=13.7.0",
]

[project.scripts]
chronicle = "chronicle.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chronicle"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
